--- a/src/ledger/balancereader/pom.xml
+++ b/src/ledger/balancereader/pom.xml
@@ -15,8 +15,9 @@
  limitations under the License.
 -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>balancereader</artifactId>
@@ -68,7 +69,7 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
-       </dependencies>
+        </dependencies>
     </dependencyManagement>
 
     <dependencies>
@@ -132,9 +133,9 @@
             <artifactId>postgresql</artifactId>
         </dependency>
         <dependency>
-          <groupId>com.google.guava</groupId>
-          <artifactId>guava</artifactId>
-          <version>32.1.3-jre</version>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>32.1.3-jre</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
@@ -178,8 +179,25 @@
                 <version>3.4.0</version>
                 <configuration>
                     <from>
-                        <image>eclipse-temurin:17.0.4.1_1-jre-alpine@sha256:e1506ba20f0cb2af6f23e24c7f8855b417f0b085708acd9b85344a884ba77767</image>
+                        <image>
+                            eclipse-temurin:17.0.4.1_1-jre-alpine@sha256:e1506ba20f0cb2af6f23e24c7f8855b417f0b085708acd9b85344a884ba77767
+                        </image>
                     </from>
+                    <extraDirectories>
+                        <paths>
+                            <path>
+                                <from>cprof</from>
+                                <into>/opt/cprof</into>
+                            </path>
+                        </paths>
+                    </extraDirectories>
+                    <container>
+                        <jvmFlags>
+                            <jvmFlag>
+                                -agentpath:/opt/cprof/profiler_java_agent.so=-cprof_service=profiler-sample-java-bench,-cprof_project_id=otel-test-sharmapranav,-cprof_service_version=1.0
+                            </jvmFlag>
+                        </jvmFlags>
+                    </container>
                 </configuration>
             </plugin>
             <plugin>
