configure workload identity

--- a/kubernetes-manifests/balance-reader.yaml
+++ b/kubernetes-manifests/balance-reader.yaml
@@ -140,6 +140,8 @@ spec:
         runAsNonRoot: true
         runAsUser: 1000
       serviceAccountName: bank-of-anthos
+      nodeSelector:
+        iam.gke.io/gke-metadata-server-enabled: "true"
       terminationGracePeriodSeconds: 5
       volumes:
         - emptyDir: {}
